// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|a11y Default 1`] = `<button />`;

exports[`Storyshots Addons|a11y Disabled 1`] = `
<button
  disabled=""
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y Label 1`] = `
<button>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y Story 4 1`] = `
<button
  style="color: black; background-color: brown;"
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addons|a11y Story 5 1`] = `<div />`;
